src/objects/ICDS_Domain_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Active_Users__c</fullName>
        <label>Active Users</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms__c</fullName>
        <label>Forms</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAMs__c</fullName>
        <label>WAMs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ICDS Domain Snapshot</label>
    <nameField>
        <displayFormat>ICDS-Snapshot-{00000}</displayFormat>
        <label>ICDS Domain Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICDS Domain Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>